--- a/frontend/src/components/Testimonial.astro
+++ b/frontend/src/components/Testimonial.astro
@@ -1,66 +1,72 @@
 <div
-  class="relative bg-[#C8F031] w-full px-4 sm:px-20 md:px-40 lg:px-60 xl:px-80 pt-10 py-20 flex flex-col gap-10 items-center"
+  class="relative w-full bg-[#C8F031] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6"
 >
-  <p class="text-center font-bold text-5xl lg:text-7xl">What Clients Say</p>
-  <p class="text-xl text-center w-full max-w-[670px]">
-    A digital designer and creative developer from Delhi - India passionate
-    about creating memorable experiences.
-  </p>
-  <div
-    class="p-6 border bg-white border-[#0C0F03] rounded-xl flex flex-col gap-10 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1 w-full max-w-[770px]"
-  >
+  <div class="flex flex-col gap-10 items-center py-20">
     <p
-      class="bg-[#FEE145] w-10 h-10 flex justify-center items-center rounded-full border"
+      class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center"
     >
+      What Clients Say
+    </p>
+    <p class="text-lg sm:text-xl text-center w-full max-w-[670px]">
+      A digital designer and creative developer from Delhi - India passionate
+      about creating memorable experiences.
+    </p>
+    <div
+      class="p-6 border bg-white border-[#0C0F03] rounded-xl flex flex-col gap-10 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1 w-full max-w-[770px]"
+    >
+      <p
+        class="bg-[#FEE145] w-10 h-10 flex justify-center items-center rounded-full border"
+      >
+        <svg
+          width="19"
+          height="15"
+          viewBox="0 0 19 15"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M2.85956 6.45229C3.69757 6.67778 4.11657 7.016 4.11657 7.46697C4.11657 7.93843 3.90707 8.75837 3.48806 9.92679C3.04811 11.0952 2.3777 12.5403 1.47684 14.2622C1.47684 14.4262 1.55017 14.5902 1.69682 14.7542C1.84347 14.9182 1.99012 15.0002 2.13677 15.0002C2.76528 15.0002 3.71852 13.7498 4.99648 11.2489C6.25349 8.74813 6.882 6.79052 6.882 5.37612C6.882 3.96173 6.49442 2.76257 5.71926 1.77864C4.9441 0.815211 4.07467 0.333496 3.11096 0.333496C2.1263 0.333496 1.36161 0.599976 0.816907 1.13294C0.272201 1.6659 -0.000152588 2.41409 -0.000152588 3.37752C-0.000152588 4.93541 0.953084 5.96033 2.85956 6.45229Z"
+            fill="#0C0F03"></path>
+          <path
+            d="M14.4555 6.26781C15.0421 6.45229 15.3354 6.69828 15.3354 7.00575C15.3354 7.88719 14.885 9.1376 13.9841 10.757C13.0833 12.3764 12.6328 13.2475 12.6328 13.3705C12.6328 13.842 12.8004 14.0777 13.1356 14.0777C13.9318 14.0777 15.0526 12.8376 16.4982 10.3573C17.9437 7.89744 18.6665 5.96033 18.6665 4.54594C18.6665 1.77864 17.5143 0.394992 15.2097 0.394992C14.267 0.394992 13.5023 0.630724 12.9157 1.10219C12.3291 1.57365 12.0358 2.21936 12.0358 3.0393C12.0358 3.79774 12.2872 4.48444 12.79 5.09939C13.2928 5.71435 13.848 6.10382 14.4555 6.26781Z"
+            fill="#0C0F03"></path>
+        </svg>
+      </p>
+      <p class="font-medium text-lg sm:text-xl text-[#4E5358]">
+        "Nikhil Patel demonstrates an excellent understanding of user needs and
+        all of his designs are creative and elegant in simplicity. He is very
+        well thought out and has an excellent response to feedback.”
+      </p>
+      <div class="flex flex-col gap-1">
+        <p class="text-xl sm:text-2xl font-bold">Elon Musk</p>
+        <p class="text-[#4E5358] text-sm sm:text-base">CEO of Tesla</p>
+      </div>
+    </div>
+    <div class="absolute top-10 left-20 hidden xl:block">
       <svg
-        width="19"
-        height="15"
-        viewBox="0 0 19 15"
+        width="165"
+        height="192"
+        viewBox="0 0 165 192"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          d="M2.85956 6.45229C3.69757 6.67778 4.11657 7.016 4.11657 7.46697C4.11657 7.93843 3.90707 8.75837 3.48806 9.92679C3.04811 11.0952 2.3777 12.5403 1.47684 14.2622C1.47684 14.4262 1.55017 14.5902 1.69682 14.7542C1.84347 14.9182 1.99012 15.0002 2.13677 15.0002C2.76528 15.0002 3.71852 13.7498 4.99648 11.2489C6.25349 8.74813 6.882 6.79052 6.882 5.37612C6.882 3.96173 6.49442 2.76257 5.71926 1.77864C4.9441 0.815211 4.07467 0.333496 3.11096 0.333496C2.1263 0.333496 1.36161 0.599976 0.816907 1.13294C0.272201 1.6659 -0.000152588 2.41409 -0.000152588 3.37752C-0.000152588 4.93541 0.953084 5.96033 2.85956 6.45229Z"
-          fill="#0C0F03"></path>
-        <path
-          d="M14.4555 6.26781C15.0421 6.45229 15.3354 6.69828 15.3354 7.00575C15.3354 7.88719 14.885 9.1376 13.9841 10.757C13.0833 12.3764 12.6328 13.2475 12.6328 13.3705C12.6328 13.842 12.8004 14.0777 13.1356 14.0777C13.9318 14.0777 15.0526 12.8376 16.4982 10.3573C17.9437 7.89744 18.6665 5.96033 18.6665 4.54594C18.6665 1.77864 17.5143 0.394992 15.2097 0.394992C14.267 0.394992 13.5023 0.630724 12.9157 1.10219C12.3291 1.57365 12.0358 2.21936 12.0358 3.0393C12.0358 3.79774 12.2872 4.48444 12.79 5.09939C13.2928 5.71435 13.848 6.10382 14.4555 6.26781Z"
-          fill="#0C0F03"></path>
+          d="M62.302 6.39267L2.18898 110.867C-1.19497 116.749 0.966453 124.264 6.95793 127.448L125.387 190.397C132.503 194.18 141.251 190.012 142.796 182.102L164.508 70.9747C165.415 66.3284 163.507 61.5827 159.635 58.8589L79.6075 2.56252C73.8351 -1.49819 65.8218 0.275364 62.302 6.39267Z"
+          fill="#B9E31B"></path>
       </svg>
-    </p>
-    <p class="font-medium text-xl sm:text-2xl text-[#4E5358]">
-      "Nikhil Patel demonstrates an excellent understanding of user needs and
-      all of his designs are creative and elegant in simplicity. He is very well
-      thought out and has an excellent response to feedback.”
-    </p>
-    <div class="flex flex-col gap-1">
-      <p class="text-2xl font-bold">Elon Musk</p>
-      <p class="text-[#4E5358] text-sm">CEO of Tesla</p>
     </div>
-  </div>
-  <div class="absolute top-10 left-20 hidden xl:block">
-    <svg
-      width="165"
-      height="192"
-      viewBox="0 0 165 192"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <path
-        d="M62.302 6.39267L2.18898 110.867C-1.19497 116.749 0.966453 124.264 6.95793 127.448L125.387 190.397C132.503 194.18 141.251 190.012 142.796 182.102L164.508 70.9747C165.415 66.3284 163.507 61.5827 159.635 58.8589L79.6075 2.56252C73.8351 -1.49819 65.8218 0.275364 62.302 6.39267Z"
-        fill="#B9E31B"></path>
-    </svg>
-  </div>
-  <div class="absolute bottom-10 right-20 hidden xl:block">
-    <svg
-      width="165"
-      height="192"
-      viewBox="0 0 165 192"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <path
-        d="M62.302 6.39267L2.18898 110.867C-1.19497 116.749 0.966453 124.264 6.95793 127.448L125.387 190.397C132.503 194.18 141.251 190.012 142.796 182.102L164.508 70.9747C165.415 66.3284 163.507 61.5827 159.635 58.8589L79.6075 2.56252C73.8351 -1.49819 65.8218 0.275364 62.302 6.39267Z"
-        fill="#B9E31B"></path>
-    </svg>
+    <div class="absolute bottom-10 right-20 hidden xl:block">
+      <svg
+        width="165"
+        height="192"
+        viewBox="0 0 165 192"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M62.302 6.39267L2.18898 110.867C-1.19497 116.749 0.966453 124.264 6.95793 127.448L125.387 190.397C132.503 194.18 141.251 190.012 142.796 182.102L164.508 70.9747C165.415 66.3284 163.507 61.5827 159.635 58.8589L79.6075 2.56252C73.8351 -1.49819 65.8218 0.275364 62.302 6.39267Z"
+          fill="#B9E31B"></path>
+      </svg>
+    </div>
   </div>
 </div>
