--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<div class="bg-[#C8F031] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6">
+<div class="bg-[#C8F031] w-full px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6">
   <div class="max-w-[1280px] mx-auto flex flex-col pt-10">
     <div class="flex flex-col xl:flex-row justify-between gap-5 py-10 w-full">
       <div class="w-full xl:w-3/8">
