--- a/frontend/src/components/Projects.astro
+++ b/frontend/src/components/Projects.astro
@@ -1,9 +1,9 @@
 <div
-  class="px-4 sm:px-10 md:px-20 lg:px-40 xl:px-80 py-30 flex flex-col gap-20"
+  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto py-20 flex flex-col gap-10"
 >
-  <div class="flex flex-col sm:flex-row justify-between items-center gap-5">
+  <div class="flex flex-col xl:flex-row justify-between items-center gap-5">
     <p
-      class="text-4xl lg:text-4xl xl:text-7xl font-bold text-center sm:text-left"
+      class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center xl:text-left"
     >
       My Latest Design & Development Projects
     </p>
@@ -13,15 +13,17 @@
     >
   </div>
   <div class="flex flex-col gap-10">
-    <div class="flex flex-col md:flex-row justify-between items-center gap-10">
+    <div class="flex flex-col xl:flex-row items-center gap-5 xl:gap-20">
       <div
-        class="p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
       >
-        <img class="w-150" src="/images/project1.webp" alt="" />
+        <img class="w-full bg-cover" src="/images/project1.webp" alt="" />
       </div>
-      <div class="w-screen max-w-[470px] flex flex-col gap-5 px-6">
-        <p class="text-3xl font-bold">Photographer Portfolio Landing Page</p>
-        <p class="text-[#545849]">
+      <div class="w-full xl:w-9/20 flex flex-col gap-5">
+        <p class="text-2xl sm:text-3xl font-bold">
+          Photographer Portfolio Landing Page
+        </p>
+        <p class="text-[#545849] text-lg sm:text-xl">
           This is a Photographer Website Landing Page design. Where you can hire
           a professional photographer very easily.
         </p>
@@ -52,19 +54,17 @@
         </p>
       </div>
     </div>
-    <div
-      class="flex flex-col md:flex-row-reverse justify-between items-center gap-10"
-    >
+    <div class="flex flex-col xl:flex-row-reverse items-center gap-5 xl:gap-20">
       <div
-        class="p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
       >
-        <img class="w-150" src="/images/project2.webp" alt="" />
+        <img class="w-full bg-cover" src="/images/project2.webp" alt="" />
       </div>
-      <div class="w-screen max-w-[470px] flex flex-col gap-5 px-6">
-        <p class="text-3xl font-bold">
+      <div class="w-full xl:w-9/20 flex flex-col gap-5">
+        <p class="text-2xl sm:text-3xl font-bold">
           Jewelry Website Landing Page - M Jewelry
         </p>
-        <p class="text-[#545849]">
+        <p class="text-[#545849] text-lg sm:text-xl">
           This is a Jewelry Landing Page design. Where you can buy any kind of
           jewelry items from this online shop.
         </p>
@@ -95,15 +95,17 @@
         </p>
       </div>
     </div>
-    <div class="flex flex-col md:flex-row justify-between items-center gap-10">
+    <div class="flex flex-col xl:flex-row items-center gap-5 xl:gap-20">
       <div
-        class="p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
       >
-        <img class="w-150" src="/images/project3.webp" alt="" />
+        <img class="w-full bg-cover" src="/images/project3.webp" alt="" />
       </div>
-      <div class="w-screen max-w-[470px] flex flex-col gap-5 px-6">
-        <p class="text-3xl font-bold">Creative Agency Landing Page - Connive</p>
-        <p class="text-[#545849]">
+      <div class="w-full xl:w-9/20 flex flex-col gap-5">
+        <p class="text-2xl sm:text-3xl font-bold">
+          Creative Agency Landing Page - Connive
+        </p>
+        <p class="text-[#545849] text-lg sm:text-xl">
           A Creative Agency Website Landing Page design. Where you can hire
           designers & developers for your digital projects.
         </p>
