--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
 import Credit from "../components/Credit.astro";
 ---
@@ -30,6 +31,7 @@ import Credit from "../components/Credit.astro";
     <title>My Portfolio</title>
   </head>
   <body>
+    <Navbar />
     <slot />
     <Footer />
     <!-- <Credit /> -->
