--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -1,4 +1,6 @@
-<div class="w-full flex flex-col sm:h-screen justify-between pt-[30px]">
+<div
+  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto py-50"
+>
   <div
     class="flex flex-col justify-center items-center gap-4 px-[20px] my-20 sm:my-0"
   >
@@ -36,63 +38,6 @@
         class="rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
         >View Portfolio</button
       >
-    </div>
-  </div>
-
-  <div
-    id="tech-carousel"
-    class="bg-[#0C0F03] text-3xl font-bold h-28 overflow-hidden w-full"
-  >
-    <div id="carousel-container" class="flex h-full items-center">
-      <!-- First set of tech icons -->
-      <ul
-        class="tech-list flex items-center [&_li]:flex [&_li]:items-center [&_li]:gap-4 [&_li]:mx-8 [&_img]:max-w-none invert"
-      >
-        <li>
-          <img class="h-12 w-12" src="/svg/mongodb.svg" />
-          <p>MongoDB</p>
-        </li>
-        <li>
-          <img class="h-12 w-12" src="/svg/express.svg" />
-          <p>Express.JS</p>
-        </li>
-        <li>
-          <img class="h-12 w-12" src="/svg/react.svg" />
-          <p>React.JS</p>
-        </li>
-        <li>
-          <img class="h-12 w-12" src="/svg/nodedotjs.svg" />
-          <p>Node.Js</p>
-        </li>
-        <li>
-          <img class="h-12 w-12" src="/svg/html5.svg" />
-          <p>HTML5</p>
-        </li>
-        <li>
-          <img class="h-12 w-12" src="/svg/css.svg" />
-          <p>CSS</p>
-        </li>
-        <li>
-          <img class="h-12 w-12" src="/svg/javascript.svg" />
-          <p>JavaScript</p>
-        </li>
-        <li>
-          <img class="h-12 w-12" src="/svg/astro.svg" />
-          <p>Astro</p>
-        </li>
-        <li>
-          <img class="h-12 w-12" src="/svg/git.svg" />
-          <p>Git</p>
-        </li>
-        <li>
-          <img class="h-12 w-12" src="/svg/github.svg" />
-          <p>Github</p>
-        </li>
-        <li>
-          <img class="h-12 w-12" src="/svg/postman.svg" />
-          <p>Postman</p>
-        </li>
-      </ul>
     </div>
   </div>
 </div>
