--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -7,11 +7,13 @@ import Projects from "../components/Projects.astro";
 import Testimonial from "../components/Testimonial.astro";
 import Credit from "../components/Credit.astro";
 import FAQ from "../components/FAQ.astro";
+import Carousel from "../components/Carousel.astro";
 ---
 
 <Layout>
   <!-- <Credit /> -->
   <Hero />
+  <Carousel />
   <Features />
   <Services />
   <Projects />
