--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -1,28 +1,26 @@
 <div
-  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto py-50"
+  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto py-10 xl:py-50"
 >
-  <div
-    class="flex flex-col justify-center items-center gap-4 px-[20px] my-20 sm:my-0"
-  >
+  <div class="flex flex-col justify-center items-center gap-5">
     <div
-      class="flex flex-col-reverse sm:flex-row gap-[20px] text-center justify-center items-center"
+      class="flex flex-col-reverse xl:flex-row gap-5 text-center justify-center items-center"
     >
-      <p class="hidden sm:block w-[36px] h-[2px] bg-[#0C0F03]"></p>
+      <p class="hidden xl:block w-[36px] h-[2px] bg-[#0C0F03]"></p>
       <p class="text-2xl sm:text-3xl md:text-4xl font-medium">
         Hello, I'm Nikhil
       </p>
       <span
-        class="cursor-pointer text-8xl sm:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30"
+        class="cursor-pointer text-8xl xl:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30"
         >👋</span
       >
     </div>
     <p
-      class="flex justify-center items-center font-bold w-full sm:w-full max-w-[970px] text-center text-5xl sm:text-5xl md:text-[90px]/23"
+      class="flex justify-center items-center font-bold text-center text-5xl md:text-6xl lg:text-7xl xl:text-8xl"
     >
       Digital Designer Creative Developer
     </p>
     <p
-      class="text-[#545849] font-base text-center w-full sm:w-[600px] text-base sm:text-lg"
+      class="text-[#545849] font-base text-center w-full sm:w-[600px] text-lg sm:text-xl"
     >
       A digital designer and creative developer from Delhi - India passionate
       about creating memorable experiences.
