--- a/frontend/src/components/Projects.astro
+++ b/frontend/src/components/Projects.astro
@@ -8,7 +8,7 @@
       My Latest Design & Development Projects
     </p>
     <button
-      class="whitespace-nowrap w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="whitespace-nowrap hidden xl:block w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
       >View All Projects</button
     >
   </div>
@@ -136,5 +136,9 @@
         </p>
       </div>
     </div>
+    <button
+      class="whitespace-nowrap xl:hidden w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      >View All Projects</button
+    >
   </div>
 </div>
