--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -49,7 +49,7 @@ const currentPath = pathname.slice(1);
     </svg>
   </p>
   <div
-    class="sidebar_menu absolute z-10 top-0 right-0 bottom-0 overflow-hidden bg-white w-0 cursor-pointer flex justify-center items-center"
+    class="sidebar_menu fixed z-10 top-0 right-0 bottom-0 overflow-hidden bg-white w-0 cursor-pointer flex justify-center items-center"
   >
     <div
       class="flex flex-col items-center gap-5 font-bold text-2xl text-center"
