--- a/frontend/src/components/Carousel.astro
+++ b/frontend/src/components/Carousel.astro
@@ -1,6 +1,6 @@
 <div
   id="tech-carousel"
-  class="bg-[#0C0F03] w-full text-2xl font-bold h-28 overflow-hidden"
+  class="bg-[#0C0F03] w-full text-2xl font-bold h-28 overflow-hidden my-10 sm:my-0"
 >
   <div id="carousel-container" class="flex h-full items-center">
     <!-- First set of tech icons -->
