--- a/frontend/src/components/Services.astro
+++ b/frontend/src/components/Services.astro
@@ -1,12 +1,14 @@
 <div
-  class="mt-[100px] md:mt-[180px] max-w-[1170px] mx-auto p-2 flex flex-col gap-10"
+  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto my-0 sm:my-20 flex flex-col gap-10"
 >
   <div class="max-w-[670px] mx-auto">
-    <p class="text-4xl sm:text-5xl lg:text-7xl font-bold text-center">
+    <p
+      class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center"
+    >
       Digital Services I am Providing
     </p>
   </div>
-  <div class="flex flex-col sm:flex-row gap-6 p-4">
+  <div class="flex flex-col xl:flex-row gap-6">
     <div
       class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
     >
@@ -81,8 +83,8 @@
         </svg>
       </div>
       <div class="flex flex-col gap-2">
-        <p class="text-2xl/6 font-bold">Web Design</p>
-        <p class="text-[#545849] text-base/relaxed">
+        <p class="text-xl sm:text-2xl/6 font-bold">Web Design</p>
+        <p class="text-[#545849] text-lg sm:text-xl/relaxed">
           A digital designer and creative developer from Delhi - India
           passionate about creating memorable experiences.
         </p>
@@ -146,8 +148,8 @@
         </svg>
       </div>
       <div class="flex flex-col gap-2">
-        <p class="text-2xl/6 font-bold">Mobile App Design</p>
-        <p class="text-[#545849] text-base/relaxed">
+        <p class="text-xl sm:text-2xl/6 font-bold">Mobile App Design</p>
+        <p class="text-[#545849] text-lg sm:text-xl/relaxed">
           A digital designer and creative developer from Delhi - India
           passionate about creating memorable experiences.
         </p>
@@ -214,8 +216,8 @@
         </svg>
       </div>
       <div class="flex flex-col gap-2">
-        <p class="text-2xl/6 font-bold">Web Development</p>
-        <p class="text-[#545849] text-base/relaxed">
+        <p class="text-xl sm:text-2xl/6 font-bold">Web Development</p>
+        <p class="text-[#545849] text-lg sm:text-xl/relaxed">
           A digital designer and creative developer from Delhi - India
           passionate about creating memorable experiences.
         </p>
