--- a/frontend/src/components/Features.astro
+++ b/frontend/src/components/Features.astro
@@ -1,9 +1,9 @@
 <div
-  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto my-20 flex flex-col xl:flex-row gap-10 items-center"
+  class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 mx-auto my-40 flex flex-col xl:flex-row gap-10 items-center"
 >
   <div class="max-w-[870px] flex px-5 text-center md:text-left">
     <p
-      class="font-bold text-[#0C0F03] text-4xl sm:text-5xl md:text-6xl lg:text-7xl"
+      class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center xl:text-left"
     >
       At the <span
         class="inline-block cursor-pointer text-8xl sm:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30"
@@ -13,12 +13,12 @@
   </div>
   <div class="relative mx-auto flex justify-center xl:block">
     <div
-      class="flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#C8F031] text-3xl font-medium border-[#0C0F03] border shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="xl:absolute xl:-top-40 xl:-left-40 flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#C8F031] text-3xl font-medium border-[#0C0F03] border shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
     >
       02+ <span class="text-base font-normal">Experience</span>
     </div>
     <div
-      class="relative -left-[30px] xl:absolute xl:left-[110px] xl:top-[110px] flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#01CC65] text-3xl font-medium border-[#0C0F03] border shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="relative -left-[30px] xl:absolute xl:-left-15 xl:-top-10 flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#01CC65] text-3xl font-medium border-[#0C0F03] border shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
     >
       10+ <span class="text-base font-normal">Projects Done</span>
     </div>
