--- a/frontend/src/components/Carousel.astro
+++ b/frontend/src/components/Carousel.astro
@@ -1,56 +1,110 @@
-<div
-  id="tech-carousel"
-  class="bg-[#0C0F03] w-full text-2xl font-bold h-28 overflow-hidden my-10 sm:my-0"
->
-  <div id="carousel-container" class="flex h-full items-center">
-    <!-- First set of tech icons -->
-    <ul
-      class="tech-list flex items-center [&_li]:flex [&_li]:items-center [&_li]:gap-4 [&_li]:mx-8 [&_img]:max-w-none invert"
-    >
-      <li>
-        <img class="h-10 w-10" src="/svg/mongodb.svg" />
-        <p>MongoDB</p>
-      </li>
-      <li>
-        <img class="h-10 w-10" src="/svg/express.svg" />
-        <p>Express.JS</p>
-      </li>
-      <li>
-        <img class="h-10 w-10" src="/svg/react.svg" />
-        <p>React.JS</p>
-      </li>
-      <li>
-        <img class="h-10 w-10" src="/svg/nodedotjs.svg" />
-        <p>Node.Js</p>
-      </li>
-      <li>
-        <img class="h-10 w-10" src="/svg/html5.svg" />
-        <p>HTML5</p>
-      </li>
-      <li>
-        <img class="h-10 w-10" src="/svg/css.svg" />
-        <p>CSS</p>
-      </li>
-      <li>
-        <img class="h-10 w-10" src="/svg/javascript.svg" />
-        <p>JavaScript</p>
-      </li>
-      <li>
-        <img class="h-10 w-10" src="/svg/astro.svg" />
-        <p>Astro</p>
-      </li>
-      <li>
-        <img class="h-10 w-10" src="/svg/git.svg" />
-        <p>Git</p>
-      </li>
-      <li>
-        <img class="h-10 w-10" src="/svg/github.svg" />
-        <p>Github</p>
-      </li>
-      <li>
-        <img class="h-10 w-10" src="/svg/postman.svg" />
-        <p>Postman</p>
-      </li>
-    </ul>
-  </div>
+<div class="w-full bg-black text-2xl font-bold py-10 overflow-hidden">
+  <ul
+    class="flex gap-24 [&_li]:flex [&_li]:justify-center [&_li]:items-center [&_li]:gap-4 invert scroll-left w-fit"
+  >
+    <li>
+      <img class="h-10 w-10" src="/svg/mongodb.svg" />
+      <p>MongoDB</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/express.svg" />
+      <p>Express.JS</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/react.svg" />
+      <p>React.JS</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/nodedotjs.svg" />
+      <p>Node.Js</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/html5.svg" />
+      <p>HTML5</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/css.svg" />
+      <p>CSS</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/javascript.svg" />
+      <p>JavaScript</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/astro.svg" />
+      <p>Astro</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/git.svg" />
+      <p>Git</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/github.svg" />
+      <p>Github</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/postman.svg" />
+      <p>Postman</p>
+    </li>
+
+    <!-- Second Set of Icons -->
+
+    <li>
+      <img class="h-10 w-10" src="/svg/mongodb.svg" />
+      <p>MongoDB</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/express.svg" />
+      <p>Express.JS</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/react.svg" />
+      <p>React.JS</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/nodedotjs.svg" />
+      <p>Node.Js</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/html5.svg" />
+      <p>HTML5</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/css.svg" />
+      <p>CSS</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/javascript.svg" />
+      <p>JavaScript</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/astro.svg" />
+      <p>Astro</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/git.svg" />
+      <p>Git</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/github.svg" />
+      <p>Github</p>
+    </li>
+    <li>
+      <img class="h-10 w-10" src="/svg/postman.svg" />
+      <p>Postman</p>
+    </li>
+  </ul>
 </div>
+
+<style>
+  @keyframes scroll-left {
+    to {
+      transform: translate(calc(-50% - 3rem));
+    }
+  }
+
+  .scroll-left {
+    animation: scroll-left 30s linear infinite;
+    will-change: transform;
+  }
+</style>
