--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -34,6 +34,6 @@ import Credit from "../components/Credit.astro";
     <Navbar />
     <slot />
     <Footer />
-    <!-- <Credit /> -->
+    <Credit />
   </body>
 </html>
