--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,13 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Hero from "../components/Hero.astro";
-import Features from "../components/Features.astro";
-import Services from "../components/Services.astro";
-import Projects from "../components/Projects.astro";
-import Testimonial from "../components/Testimonial.astro";
-import Credit from "../components/Credit.astro";
-import FAQ from "../components/FAQ.astro";
-import Carousel from "../components/Carousel.astro";
+import Hero from "../components/index/Hero.astro";
+import Features from "../components/index/Features.astro";
+import Services from "../components/index/Services.astro";
+import Projects from "../components/index/Projects.astro";
+import Testimonial from "../components/index/Testimonial.astro";
+import FAQ from "../components/index/FAQ.astro";
+import Carousel from "../components/index/Carousel.astro";
 ---
 
 <Layout>
