--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "../styles/global.css";
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
 import Credit from "../components/Credit.astro";
+import ScrollUp from "../components/ScrollUp.astro";
 ---
 
 <!doctype html>
@@ -31,6 +32,7 @@ import Credit from "../components/Credit.astro";
     <title>My Portfolio</title>
   </head>
   <body>
+    <ScrollUp />
     <Navbar />
     <slot />
     <Footer />
