--- a/frontend/src/pages/about.astro
+++ b/frontend/src/pages/about.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Profile from "../components/about/Profile.astro";
 ---
 
 <Layout>
-  <div class="h-screen w-full flex justify-center items-center">
-    <p class="text-3xl font-bold">About Me</p>
+  <div class="my-20 w-full flex justify-center items-center">
+    <Profile />
   </div>
 </Layout>
