--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -36,6 +36,6 @@ import ScrollUp from "../components/ScrollUp.astro";
     <Navbar />
     <slot />
     <Footer />
-    <Credit />
+    <!-- <Credit /> -->
   </body>
 </html>
