--- a/frontend/src/components/index/Services.astro
+++ b/frontend/src/components/index/Services.astro
@@ -10,7 +10,7 @@
   </div>
   <div class="flex flex-col xl:flex-row gap-6">
     <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
     >
       <div
         class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
@@ -92,7 +92,7 @@
     </div>
 
     <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
     >
       <div
         class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
@@ -157,7 +157,7 @@
     </div>
 
     <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
     >
       <div
         class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
@@ -226,7 +226,7 @@
   </div>
   <div class="mx-auto">
     <button
-      class="bg-[#C8F031] rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="bg-[#C8F031] rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
       >Get In Touch</button
     >
   </div>
