--- a/frontend/src/components/index/Features.astro
+++ b/frontend/src/components/index/Features.astro
@@ -13,12 +13,12 @@
   </div>
   <div class="relative mx-auto flex justify-center xl:block">
     <div
-      class="relative left-[10px] xl:absolute xl:-top-40 xl:-left-40 flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#C8F031] text-3xl font-medium border-[#0C0F03] border shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="relative left-[10px] xl:absolute xl:-top-40 xl:-left-40 flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#C8F031] text-3xl font-medium border-[#0C0F03] border shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
     >
       02+ <span class="text-base font-normal">Experience</span>
     </div>
     <div
-      class="relative -left-[10px] xl:absolute xl:-left-15 xl:-top-10 flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#01CC65] text-3xl font-medium border-[#0C0F03] border shadow-[4px_4px_0px_#0C0F03] hover:shadow-[8px_8px_0px_#0C0F03] hover:-translate-y-1"
+      class="relative -left-[10px] xl:absolute xl:-left-15 xl:-top-10 flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#01CC65] text-3xl font-medium border-[#0C0F03] border shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
     >
       10+ <span class="text-base font-normal">Projects Done</span>
     </div>
