--- a/frontend/src/components/index/Features.astro
+++ b/frontend/src/components/index/Features.astro
@@ -6,7 +6,7 @@
       class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center xl:text-left"
     >
       At the <span
-        class="inline-block cursor-pointer text-8xl sm:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30"
+        class="inline-block cursor-pointer text-8xl sm:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30 active:scale-250 active:rotate-30"
         >💓</span
       ><br /> of Design is an Opportunity to Solve Problem
     </p>
