--- a/frontend/src/components/index/Hero.astro
+++ b/frontend/src/components/index/Hero.astro
@@ -10,7 +10,7 @@
         Hello, I'm Nikhil
       </p>
       <span
-        class="cursor-pointer text-8xl xl:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30"
+        class="cursor-pointer text-8xl xl:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30 active:scale-250 active:rotate-30"
         >👋</span
       >
     </div>
